# liblui

./: .gitignore  LICENSE  README.md  build.cmd  build.sh  buildmeson.cmd  buildmeson.sh  clean.cmd  clean.sh  run.cmd  run.sh  runmac.sh
libui-ng/: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMAKE_PROJECT_STRUCTURE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README-cmake.md  README.md  meson.build  meson_options.txt  ui.h  ui_darwin.h  ui_unix.h  ui_windows.h
libui-ng/cmake/: toolchain.cmake
libui-ng/common/: CMakeLists.txt  OLD_table.c  areaevents.c  attribute.c  attrlist.c  attrstr.c  attrstr.h  control.c  controlsigs.h  debug.c  matrix.c  meson.build  opentype.c  shouldquit.c  table.c  table.h  tablemodel.c  tablevalue.c  uipriv.h  userbugs.c  utf.c  utf.h
libui-ng/darwin/: CMakeLists.txt  OLD_table.m  aat.m  alloc.m  area.m  areaevents.m  attrstr.h  attrstr.m  autolayout.m  box.m  button.m  checkbox.m  colorbutton.m  combobox.m  control.m  datetimepicker.m  debug.m  draw.h  draw.m  drawtext.m  editablecombo.m  entry.m  event.m  fontbutton.m  fontmatch.m  fonttraits.m  fontvariation.m  form.m  future.m  graphemes.m  grid.m  group.m  image.m  label.m  main.m  map.m  menu.m  meson.build  multilineentry.m  opentype.m  (+18 more)
libui-ng/doc/: .gitignore  Readme.md  build_authors_file.py  ci-pipelines.md  doxygen.md
libui-ng/doc/doxygen/: doxygen-subpage-api.md  footer.html  header.html
libui-ng/examples/: meson.build  resources.rc
libui-ng/examples/controlgallery/: main.c
libui-ng/examples/cpp-multithread/: main.cpp
libui-ng/examples/datetime/: main.c
libui-ng/examples/drawtext/: main.c
libui-ng/examples/hello-world/: main.c
libui-ng/examples/histogram/: main.c
libui-ng/examples/timer/: main.c
libui-ng/examples/window/: main.c
libui-ng/test/: OLD_page16.c  drawtests.c  images.c  main.c  menus.c  meson.build  page1.c  page10.c  page11.c  page12.c  page13.c  page14.c  page15.c  page16.c  page17.c  page2.c  page3.c  page4.c  page5.c  page6.c  page7.c  page7a.c  page7b.c  page7c.c  page8.c  page9.c  resources.rc  spaced.c  test.h  test.manifest  test.static.manifest
libui-ng/test/images/: gen.go
libui-ng/test/unit/: button.c  checkbox.c  combobox.c  init.c  label.c  main.c  meson.build  radiobuttons.c  resources.rc  slider.c  spinbox.c  unit.h
libui-ng/unix/: CMakeLists.txt  OLD_table.c  alloc.c  area.c  attrstr.c  attrstr.h  box.c  button.c  cellrendererbutton.c  checkbox.c  child.c  colorbutton.c  combobox.c  control.c  datetimepicker.c  debug.c  draw.c  draw.h  drawmatrix.c  drawpath.c  drawtext.c  editablecombo.c  entry.c  fontbutton.c  fontmatch.c  form.c  future.c  graphemes.c  grid.c  group.c  image.c  label.c  main.c  menu.c  meson.build  multilineentry.c  opentype.c  progressbar.c  radiobuttons.c  separator.c  (+11 more)
libui-ng/windows/: CMakeLists.txt  _uipriv_migrate.hpp  alloc.cpp  area.cpp  area.hpp  areadraw.cpp  areaevents.cpp  areascroll.cpp  areautil.cpp  attrstr.cpp  attrstr.hpp  box.cpp  button.cpp  checkbox.cpp  colorbutton.cpp  colordialog.cpp  combobox.cpp  compilerver.hpp  container.cpp  control.cpp  d2dscratch.cpp  datetimepicker.cpp  debug.cpp  draw.cpp  draw.hpp  drawmatrix.cpp  drawpath.cpp  drawtext.cpp  dwrite.cpp  editablecombo.cpp  entry.cpp  events.cpp  fontbutton.cpp  fontdialog.cpp  fontmatch.cpp  form.cpp  graphemes.cpp  grid.cpp  group.cpp  image.cpp  (+35 more)
libui-ng/windows/_rc2bin/: build.bat  main.cpp  resources.hpp  resources.rc  winapi.hpp
lua-5.4.4/: CMakeLists.txt  lua.exe.manifest
lua-5.4.4/src/: lua54.def
lua-5.4.6/: CMakeLists.txt
lua-5.4.7/: README  lua.exe.manifest
lua-5.4.7/doc/: manual.html
lua-5.4.7/src/: lua54.def
lua-5.5.0/: CMakeLists.txt
lua-5.5.0/src/: lua55.def
lui/: .gitignore  .hgignore  .hgtags  CMakeLists.txt  Makefile  area.inc.c  container.inc.c  controls.inc.c  dialog.inc.c  draw.inc.c  gdbluish  image.inc.c  libui_notes.txt  luad.c  luad.h  lui-0.3-1.rockspec  lui.c  lui.def  luish  menu.inc.c  mkdoc  table.inc.c  text.inc.c
lui/doc/: LICENSE  README
lui/samples/: controls.lua  mainstep.lua  table.lua
lui/samples/controls/: menu.lua  page1.lua  page10.lua  page2.lua  page3.lua  page4.lua  page5.lua  page6.lua  page7.lua  page8.lua  page9.lua
